# network_bot

./: .env  .env.example  .gitignore  ARCHITECTURE_REFACTORING.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPTIMIZATION_PLAN.md  README.md  REFACTORING_PLAN.md  REFACTORING_VERIFICATION_REPORT.md  SECURITY.md  STAGE4_PATTERN.md  alembic.ini  claude.md  context.md  deploy.sh  diagnose_env.py  docker-compose.prod.yml  docker-compose.yml  inspect_files_api.py  inspect_genai.py  list_models.py  main.py  pyproject.toml  reproduce_issue.py  restart_bot.ps1  restart_bot.sh  roadmap.md  roadmap_quick_wins.md  test_upload.py
.claude/skills/: README.md  add-feature.md  fix-tests.md  (+5 more)
alembic/: env.py
app/: main.py
artifacts/: structural_proposal.md
nginx/: nginx.conf
prompts/: enrich_osint.txt  extract_contact.txt  find_matches.txt
tests/: conftest.py  test_bot_handlers.py  test_contact_editing.py  test_gemini_service.py  test_handlers_assets.py  test_handlers_contact_detail_extended.py  test_handlers_contact_extras.py  test_handlers_core.py  test_handlers_credentials.py  test_handlers_flow.py  test_handlers_ingestion.py  test_handlers_insights.py  test_handlers_menu.py  test_handlers_misc.py  test_handlers_osint.py  test_handlers_osint_extended.py  test_handlers_profile.py  test_handlers_pulse.py  test_handlers_reminders.py  test_integration_sync.py  test_integrations.py  test_menu_navigation.py  test_phase2_profile.py  test_phase3_reminders.py  test_scheduler.py  test_service_ai.py  test_service_ai_extended.py  test_service_contact.py  test_service_gemini.py  test_services.py  test_services_analytics.py  test_services_match.py  test_services_osint.py  test_services_pulse.py  test_ui_improvements_v2.py  test_views.py
webapp/: index.html  nginx.conf  package.json  vite.config.js
(+102 files in other folders)
