[project]
name = "network-bot"
version = "0.1.0"
description = "NetworkingCRM Telegram Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.1",
    "alembic>=1.13.3",
    "python-telegram-bot>=21.7",
    "redis>=5.2.0",
    "google-generativeai>=0.8.0",
    "apscheduler>=3.10.4",
    "dateparser>=1.2.2",
    "matplotlib>=3.10.0",
    "beautifulsoup4>=4.12.3",
    "tavily-python>=0.3.0",
    "aiohttp>=3.9.0",
    "gspread>=6.2.1",
    "google-auth>=2.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
